# claude-bambu-printer

./: .gitignore  README.md
.claude/skills/print/: .blender-3mf-op.txt  SKILL.md
.claude/skills/print/reference/: blender-guide.md  blender-template.py  design-patterns.md  materials.md  openscad-guide.md  print-settings.md  printability-checklist.md
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/milestones/: v1.0-MILESTONE-AUDIT.md  v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md
.planning/phases/01-skill-foundation-model-generation/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-RESEARCH.md  01-VERIFICATION.md
.planning/phases/02-model-refinement-customization/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-SUMMARY.md  02-VERIFICATION.md
.planning/phases/03-makerworld-search-download/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-SUMMARY.md  03-RESEARCH.md
.planning/phases/04-printer-integration/: 04-01-SUMMARY.md  04-02-PLAN.md
.planning/phases/05-backend-foundation/: 05-01-PLAN.md  05-01-SUMMARY.md  05-02-PLAN.md  05-CONTEXT.md  05-RESEARCH.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
backend/: .env.example  pyproject.toml
backend/app/: config.py  main.py
backend/app/models/: messages.py
backend/app/session/: claude_session.py  manager.py
backend/app/ws/: handler.py  heartbeat.py
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx
frontend/src/hooks/: useWebSocket.ts
(+43 files in other folders)
